# ip-omp

./: .gitignore  LICENSE  README.md  debug.py  environment.yml  environment_linux.yml  environment_mac.yml  omp.py  pyproject.toml  pyrightconfig.json  requirements.cpu.txt  requirements.dev.txt  requirements.gpu.txt  requirements.txt  setup.cfg  summarize.py  sync.sh
ip_is_all_you_need/: algorithms.py  applications.py  constants.py  figures.py  metrics.py  omp.py  plots.py  simulations.py  summarize.py  util.py
ip_omp/: CUB_dataset.py  algorithms.py  applications.py  clip_ip_omp.py  constants.py  cub_config.py  custom_dataset.py  figures.py  omp.py  preprocess.py  simulations.py  summarize.py  train_linear_classifier.py  util.py
ip_omp/saved_files/: cifar10_test_labels_10.npy  cifar10_train_labels_10.npy
notebooks/: coherence.ipynb  jax_impl.ipynb  omp_comparison.ipynb  phase_transition.ipynb  plot.ipynb
notebooks/.ipynb_checkpoints/: summarize-checkpoint.ipynb
script/: aggregate_results.py  generate_plots.sh  generate_results.sh  omp.py  rebuttal_figures.py  sparse_recovery_experiments.sh  sparse_recovery_plots.sh
tests/: test.py  test_all.py
torchip/: main.py
