[tool.poetry]
name = "ip-is-all-you-need"
version = "0.1.0"
description = ""
authors = ["Ryan Pilgrim <rzpilgrim@gmail.com>"]
readme = "README.md"
packages = [{include = "ip_is_all_you_need"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
typer = "^0.7.0"
rich = "^13.3.4"
tqdm = "^4.65.0"
pandas = "^2.0.0"
joblib = "^1.2.0"
cupy = {version = "^12.0.0", optional = true}
gputil = {version = "^1.4.0", optional = true}

[tool.poetry.extras]
gpu = ["cupy", "gputil"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
