[tool.poetry]
name = "ip-is-all-you-need"
version = "0.1.0"
description = ""
authors = ["Ryan Pilgrim <rzpilgrim@gmail.com>"]
readme = "README.md"
packages = [{include = "ip_is_all_you_need"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
typer = "^0.7.0"
rich = "^13.3.4"
tqdm = "^4.65.0"
pandas = "^2.0.0"
joblib = "^1.2.0"
gputil = {version = "^1.4.0", optional = true}
cupy-cuda102 = {version = "^12.0.0", optional = true}
cupy-cuda110 = {version = "^12.0.0", optional = true}
cupy-cuda111 = {version = "^12.0.0", optional = true}
cupy-cuda11x = {version = "^12.0.0", optional = true}
cupy-cuda12x = {version = "^12.0.0", optional = true}

[tool.poetry.extras]
cuda102 = ["gputil", "cuda102"]
cuda110 = ["gputil", "cuda110"]
cuda111 = ["gputil", "cuda111"]
cuda11x = ["gputil", "cuda11x"]
cuda12x = ["gputil", "cuda12x"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
