[tool.poetry]
name = "ip-is-all-you-need"
version = "0.1.0"
description = "Information Pursuit Experiments"
authors = ["Ryan Pilgrim <rzpilgrim@gmail.com>"]
readme = "README.md"
packages = [{include = "ip_is_all_you_need"}]

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu102"
secondary = true

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
typer = "^0.7.0"
rich = "^13.3.4"
tqdm = "^4.65.0"
pandas = "^2.0.0"
joblib = "^1.2.0"
gputil = {version = "^1.4.0", optional = true}
pytest = "^7.3.1"
torch = [
  {markers = "sys_platform == 'darwin' and platform_machine == 'arm64'", url = "https://files.pythonhosted.org/packages/2f/17/8b557dde1cdb5fbe82f90a3f192046c8e508f106456e12f17c87543e6a42/torch-1.12.1-cp310-none-macosx_11_0_arm64.whl"},
  {markers = "sys_platform == 'darwin' and platform_machine == 'x86_64'", url = "https://files.pythonhosted.org/packages/37/72/ef80d39a371a9b4a8aadfb22b141972cc67a7075dae69a9d5b8116505ec0/torch-1.12.1-cp310-none-macosx_10_9_x86_64.whl"},
  {markers = "sys_platform == 'linux'", source = "pytorch"}
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
